# m3u8-dl

./: .gitignore  CLAUDE.md  README.md  README_CN.md  package-lock.json  package.json
apps/desktop/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/desktop/scripts/: build-sidecar.sh
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: AddTaskForm.tsx  NewTaskModal.tsx  SettingsModal.tsx  Sidebar.tsx  TaskDetailModal.tsx  TaskItem.tsx  TaskList.tsx  TaskTable.tsx  Toolbar.tsx
apps/desktop/src/stores/: downloadStore.ts
apps/desktop/src/utils/: format.ts
docs/: debugging-guide.md  tauri-getting-started.md
docs/plans/: 2026-02-22-desktop-app-design.md  2026-02-22-desktop-app-implementation.md  2026-02-22-interrupted-task-recovery-design.md  2026-02-22-segmented-merge-design.md  2026-02-22-segmented-merge-implementation.md  2026-02-22-video-sniffer-extension-design.md  2026-02-23-localhost-proxy-fix.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
